--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Welcome to my TypeScript Playground</h1>
     <div id="playground"></div>
-    <script src="./index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
 </body>
 
 </html>
